name:                cardano-byron-proxy
version:             0.1.0.0
synopsis:            Adapter for the Byron net
-- description:
homepage:            https://github.com/input-output-hk/cardano-byron-proxy
license:             Apache-2.0
license-file:
  LICENSE
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           (c) 2019 IOHK
category:            Ouroboros
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Ouroboros.Byron.Proxy.Block,
                       Ouroboros.Byron.Proxy.Pool,
                       Ouroboros.Byron.Proxy.Main,
                       Ouroboros.Byron.Proxy.Index.ChainDB,
                       Ouroboros.Byron.Proxy.Index.Sqlite,
                       Ouroboros.Byron.Proxy.Index.Types,
                       Ouroboros.Byron.Proxy.Genesis.Convert
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       async,
                       bytestring,
                       cardano-binary,
                       cardano-crypto-wrapper,
                       cardano-ledger,
                       cardano-sl,
                       cardano-sl-binary,
                       cardano-sl-chain,
                       cardano-sl-core,
                       cardano-sl-crypto,
                       cardano-sl-db,
                       cardano-sl-infra,
                       cborg,
                       conduit,
                       containers,
                       contra-tracer,
                       cryptonite,
                       directory,
                       filepath,
                       io-sim-classes,
                       iohk-monitoring,
                       lens,
                       memory,
                       network-mux,
                       ouroboros-consensus,
                       ouroboros-network,
                       resourcet,
                       sqlite-simple,
                       serialise,
                       stm,
                       tagged,
                       text,
                       time,
                       transformers,
                       typed-protocols,
                       unliftio-core,
                       unordered-containers
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -fwarn-redundant-constraints
                       -fwarn-incomplete-patterns
                       -fwarn-unused-imports
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns

executable cardano-byron-proxy
  main-is:             Main.hs
  other-modules:       Byron,
                       DB,
                       Logging,
                       Orphans,
                       Shelley
  -- other-extensions:
  build-depends:       base,
                       async,
                       cardano-byron-proxy,
                       bytestring,
                       cardano-binary,
                       cardano-crypto-wrapper,
                       cardano-ledger,
                       cardano-sl,
                       cardano-sl-binary,
                       cardano-sl-chain,
                       cardano-sl-core,
                       cardano-sl-crypto,
                       cardano-sl-infra,
                       cardano-sl-util,
                       cborg,
                       containers,
                       contra-tracer,
                       cryptonite,
                       directory,
                       exceptions,
                       filepath,
                       iohk-monitoring,
                       io-sim-classes,
                       lens,
                       network,
                       optparse-applicative,
                       ouroboros-consensus,
                       ouroboros-network,
                       random,
                       reflection,
                       resourcet,
                       serialise,
                       stm,
                       text,
                       time,
                       transformers,
                       typed-protocols,
                       unordered-containers
  hs-source-dirs:      src/exec
  default-language:    Haskell2010
  -- -threaded is needed or else the diffusion layer will crash, due to a use
  -- of registerDelay
  ghc-options:         -threaded
                       -Wall
                       -Wcompat
                       -fwarn-redundant-constraints
                       -fwarn-incomplete-patterns
                       -fwarn-unused-imports
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
