name:                cardano-api
version:             0.1.0.0
synopsis:            An API for ouroboros-network
-- description:
license:             Apache-2.0
license-files:       LICENSE
copyright:           2019 Input Output (Hong Kong) Ltd.
maintainer:
category:            Network
build-type:          Simple
extra-source-files:
  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  -- At this experiment/prototype stage everything is exposed.
  -- This has to be tidied up once the design becomes clear.
  exposed-modules:     Cardano.Client.Byron
--                       Imports,
                       
  default-language:    Haskell2010
  build-depends:       base,
                       async,
                       network-mux,
                       ouroboros-consensus,
                       ouroboros-consensus-byron,
                       ouroboros-network,
                       typed-protocols,
                       ouroboros-network-framework

  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
